# uc1677c

./: .gitignore  LICENSE.txt  README.md
.github/workflows/: tests.yml
examples/arduino/: i2c.hpp
examples/arduino/basic_functionality/: basic_functionality.ino  cgs214a06.hpp  i2c.hpp
examples/arduino/custom_functionality_1/: custom_functionality_1.ino  uc1677c.hpp
examples/arduino/custom_functionality_2/: cgs164a00.hpp  custom_functionality_2.ino
examples/msp430/: i2c.hpp
examples/msp430/basic_functionality/: Makefile  README.md  main.cpp  main.elf
include/: cgs164a00.hpp  cgs214a06.hpp  uc1677c.hpp
tests/: CMakeLists.txt  cgs164a00_tests.cc  cgs214a06_tests.cc  test_utils.hpp  uc1677c_tests.cc
